[gd_scene load_steps=3 format=3 uid="uid://dj1r85j7cxj4q"]

[ext_resource type="Script" path="res://things/n_gram_visualizer/n_gram_point.gd" id="1_xa8f6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cwb8p"]

[node name="NGramPoint" type="Area2D"]
script = ExtResource("1_xa8f6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cwb8p")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -10, 6, -8, 8, -6, 10, 0, 8, 6, 6, 8, 0, 10, -6, 8, -8, 6, -10, 0, -8, -6, -6, -8)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
